Update code path in linter workflow #25

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,4 +18,4 @@ jobs:
           pip install flake8
       - name: Lint with flake8
         run: | 
-          flake8 --max-line-length 80
+          flake8 --max-line-length 80 dora_exp_pipeline
