--- a/dora_exp_pipeline/example_config/dora_time_series.yml
+++ b/dora_exp_pipeline/example_config/dora_time_series.yml
@@ -13,14 +13,15 @@ features: {
 
 # Outlier detection module
 outlier_detection: {
-    iforest: {},
-    pca: {
-        k: 3
-    },
-    rx: {},
-    negative_sampling: {
-        percent_increase: 20
-    }
+    # iforest: {},
+    # pca: {
+    #     k: 3
+    # },
+    # rx: {},
+    # negative_sampling: {
+    #     percent_increase: 20
+    # },
+    random: {}
 }
 
 # Results organization module
