Add pae outlier detection (working with tabular data) #13

--- a/dora_exp_pipeline/example_config/dora_time_series.yml
+++ b/dora_exp_pipeline/example_config/dora_time_series.yml
@@ -22,7 +22,10 @@ outlier_detection: {
     # negative_sampling: {
     #     percent_increase: 20
     # },
-    random: {}
+    # random: {},
+    pae: {
+        latent_dim: 3
+    }
 }
 
 # Results organization module
