changed paths to comes from /proj; it is now running

--- a/dora_exp_pipeline/example_config/dora_astronomy_des.yml
+++ b/dora_exp_pipeline/example_config/dora_astronomy_des.yml
@@ -1,9 +1,9 @@
 # Data loading module parameters
 data_type: 'Catalog'
-data_to_fit: '/Users/Urebbapr/research/dora/sample_data/astronomy_des/Y3_mastercat_12_3_19_SOMv0.21_indexselect_p0.0001_lups_colors.h5'
-data_to_score: '/Users/Urebbapr/research/dora/sample_data/astronomy_des/Y3_mastercat_12_3_19_SOMv0.21_indexselect_p0.0001_lups_colors.h5'
+data_to_fit: '/home/urebbapr/research/dora/sample_data/astronomy_des/Y3_mastercat_12_3_19_SOMv0.21_indexselect_p0.0001_lups_colors.h5'
+data_to_score: '/home/urebbapr/research/dora/sample_data/astronomy_des/Y3_mastercat_12_3_19_SOMv0.21_indexselect_p0.0001_lups_colors.h5'
 zscore_normalization: False
-out_dir: '/Users/Urebbapr/research/dora/local/runs/dataloader'
+out_dir: '/home/urebbapr/research/dora/local/runs/dataloader_test'
 
 # Feature extraction module
 features: {
@@ -14,15 +14,15 @@ features: {
 
 # Outlier detection module
 outlier_detection: {
-    # iforest: {},
+    iforest: {},
     # pca: {
     #     k: 3
     # },
     # rx: {},
     # negative_sampling: {
-    #     percent_increase: 20
+    #    percent_increase: 20
     # },
-    random: {}
+    # random: {}
 }
 
 # Results organization module
