Add raster data loader. #17

--- a/dora_exp_pipeline/example_config/dora_time_series.yml
+++ b/dora_exp_pipeline/example_config/dora_time_series.yml
@@ -14,14 +14,14 @@ features: {
 
 # Outlier detection module
 outlier_detection: {
-    # iforest: {},
-    # pca: {
-    #     k: 3
-    # },
-    # rx: {},
-    # negative_sampling: {
-    #     percent_increase: 20
-    # },
+    iforest: {},
+    pca: {
+        k: 3
+    },
+    rx: {},
+    negative_sampling: {
+        percent_increase: 20
+    },
     random: {}
 }
 
