update astronomy_des example config to include kmeans #38

--- a/dora_exp_pipeline/example_config/dora_astronomy_des.yml
+++ b/dora_exp_pipeline/example_config/dora_astronomy_des.yml
@@ -28,5 +28,7 @@ outlier_detection: {
 
 # Results organization module
 results: {
-    save_scores: {}
+    kmeans: {
+        n_clusters: 5
+    }
 }
