--- a/dora_exp_pipeline/example_config/dora_time_series.yml
+++ b/dora_exp_pipeline/example_config/dora_time_series.yml
@@ -3,7 +3,7 @@ data_type: 'Time series'
 data_to_fit: 'sample_data/earth_fieldsamples/landsat8_ndvi_2020_sample-2k.csv'
 data_to_score: 'sample_data/earth_fieldsamples/landsat8_ndvi_2020_sample-2k.csv'
 zscore_normalization: False
-out_dir: 'results'
+out_dir: 'PATH/TO/OUTPUT/DIR'
 
 # Feature extraction module
 features: {
@@ -15,14 +15,14 @@ features: {
 # Outlier detection module
 top_n: 10
 outlier_detection: {
-    # iforest: {},
-    # pca: {
-    #     k: 3
-    # },
-    # rx: {},
-    # negative_sampling: {
-    #     percent_increase: 20
-    # },
+    iforest: {},
+    pca: {
+        k: 3
+    },
+    rx: {},
+    negative_sampling: {
+        percent_increase: 20
+    },
     pae: {
         latent_dim: 3
     },
