Update planetary rover script/config to run from repo root. (#2)

--- a/sample_data/planetary_rover/png/exp/navcam.config
+++ b/sample_data/planetary_rover/png/exp/navcam.config
@@ -1,9 +1,9 @@
 # Data loading module parameters
 data_type: 'image'
-data_to_fit: '../images-fit'
-data_to_score: '../images-score'
+data_to_fit: 'sample_data/planetary_rover/png/images-fit'
+data_to_score: 'sample_data/planetary_rover/png/images-score'
 zscore_normalization: False
-out_dir: 'results'
+out_dir: 'sample_data/planetary_rover/png/exp/results'
 
 # Feature extraction module
 features: {
