--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 sample_data/planetary_rover/pds/exp/results
 sample_data/planetary_rover/pds/exp/sol01371
 sample_data/planetary_rover/png/exp/results
+sample_data/planetary_rover/png/exp/*.log
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -65,7 +66,8 @@ coverage.xml
 *.pot
 
 # Django stuff:
-*.log
+# Don't ignore this since we use log files
+#*.log
 local_settings.py
 db.sqlite3
 
