update example config files #40

--- a/dora_exp_pipeline/example_config/dora_astronomy_des.yml
+++ b/dora_exp_pipeline/example_config/dora_astronomy_des.yml
@@ -1,5 +1,8 @@
 # Data loading module parameters
-data_type: 'Catalog'
+data_type: {
+    name: 'Catalog',
+    params: {}
+}
 data_to_fit: '/home/urebbapr/research/dora/sample_data/astronomy_des/Y3_mastercat_12_3_19_SOMv0.21_indexselect_p0.0001_lups_colors.h5'
 data_to_score: '/home/urebbapr/research/dora/sample_data/astronomy_des/Y3_mastercat_12_3_19_SOMv0.21_indexselect_p0.0001_lups_colors.h5'
 zscore_normalization: False
