--- a/dora_exp_pipeline/example_config/dora_planetary_science.yml
+++ b/dora_exp_pipeline/example_config/dora_planetary_science.yml
@@ -1,5 +1,8 @@
 # Data loading module parameters
-data_type: 'image'
+data_loader: {
+    name: 'image',
+    params: {}
+}
 data_to_fit: '/PATH/TO/DIR/'
 data_to_score: '/PATH/TO/DIR/'
 zscore_normalization: False
