Implement LRX for rasters using patch loader. #36

--- a/dora_exp_pipeline/example_config/dora_raster_patches.yml
+++ b/dora_exp_pipeline/example_config/dora_raster_patches.yml
@@ -1,5 +1,10 @@
 # Data loading module parameters
-data_type: 'raster_patches'
+data_loader: {
+    name: 'raster_patches',
+    params: {
+        'patch_size': 11
+    }
+}
 data_to_fit: 'sample_data/earth_volcanoes/AST_08_00310252015145234_20170919180811_13210.SurfaceKineticTemperature.KineticTemperature.tif'
 data_to_score: 'sample_data/earth_volcanoes/AST_08_00310252015145234_20170919180811_13210.SurfaceKineticTemperature.KineticTemperature.tif'
 zscore_normalization: False
@@ -15,20 +20,20 @@ features: {
 # Outlier detection module
 top_n: 10
 outlier_detection: {
-    # iforest: {},
-    # pca: {
-    #     k: 3
-    # },
-    # rx: {},
+    iforest: {},
+    pca: {
+        k: 3
+    },
+    rx: {},
     lrx: {
         inner_window: 5,
         outer_window: 11,
         bands: 1
     },
-    # negative_sampling: {
-    #     percent_increase: 20
-    # },
-    # random: {}
+    negative_sampling: {
+        percent_increase: 20
+    },
+    random: {}
 }
 
 # Results organization module
