Visualize pixel scores as image for raster data types. #57

--- a/dora_exp_pipeline/example_config/dora_raster_pixels.yml
+++ b/dora_exp_pipeline/example_config/dora_raster_pixels.yml
@@ -16,20 +16,30 @@ features: {
 }
 
 # Outlier detection module
-top_n: 10
+top_n: 'None'
 outlier_detection: {
-    iforest: {},
-    pca: {
-        k: 3
-    },
+    # iforest: {},
+    # pca: {
+    #     k: 3
+    # },
     rx: {},
-    negative_sampling: {
-        percent_increase: 20
-    },
-    random: {}
+    # negative_sampling: {
+    #     percent_increase: 20
+    # },
+    # random: {}
 }
 
 # Results organization module
 results: {
-    save_scores: {}
+    save_scores: {},
+    reshape_raster: {
+        # the path to the input raster that was scored
+        'raster_path': 'sample_data/earth_volcanoes/AST_08_00310252015145234_20170919180811_13210.SurfaceKineticTemperature.KineticTemperature.tif',
+        # the raster data loader format used: pixels or patches
+        'data_format': 'pixels',
+        # must be specified if data_format is patches; if pixels, use 0 for patch_size
+        'patch_size': 0,
+        # colormap to use for preview image; must be supported matplotlib colormap string
+        'colormap': 'magma'
+    }
 }
