--- a/dora_exp_pipeline/example_config/dora_raster_patches.yml
+++ b/dora_exp_pipeline/example_config/dora_raster_patches.yml
@@ -2,7 +2,7 @@
 data_loader: {
     name: 'raster_patches',
     params: {
-        'patch_size': 11
+        'patch_size': 5
     }
 }
 data_to_fit: 'sample_data/earth_volcanoes/AST_08_00310252015145234_20170919180811_13210.SurfaceKineticTemperature.KineticTemperature.tif'
@@ -18,25 +18,35 @@ features: {
 }
 
 # Outlier detection module
-top_n: 10
+top_n: 'None'
 outlier_detection: {
-    iforest: {},
-    pca: {
-        k: 3
-    },
-    rx: {},
+    # iforest: {},
+    # pca: {
+    #     k: 3
+    # },
+    # rx: {},
     lrx: {
-        inner_window: 5,
-        outer_window: 11,
+        inner_window: 3,
+        outer_window: 5,
         bands: 1
     },
-    negative_sampling: {
-        percent_increase: 20
-    },
-    random: {}
+    # negative_sampling: {
+    #     percent_increase: 20
+    # },
+    # random: {}
 }
 
 # Results organization module
 results: {
-    save_scores: {}
+    save_scores: {},
+    reshape_raster: {
+        # the path to the input raster that was scored
+        'raster_path': 'sample_data/earth_volcanoes/AST_08_00310252015145234_20170919180811_13210.SurfaceKineticTemperature.KineticTemperature.tif',
+        # the raster data loader format used: pixels or patches
+        'data_format': 'patches',
+        # must be specified if data_format is patches; if pixels, use 0 for patch_size
+        'patch_size': 5,
+        # colormap to use for preview image; must be supported matplotlib colormap string
+        'colormap': 'magma'
+    }
 }
