Update config file given recent updates to data loader specification (#40)

--- a/sample_data/planetary_rover/png/exp/navcam.config
+++ b/sample_data/planetary_rover/png/exp/navcam.config
@@ -1,5 +1,8 @@
 # Data loading module parameters
-data_type: 'image'
+data_loader: {
+    name: 'image',
+    params: {}
+}
 data_to_fit: 'sample_data/planetary_rover/png/images-fit'
 data_to_score: 'sample_data/planetary_rover/png/images-score'
 zscore_normalization: False
