Expose training params; use random seed for model training; update fmnist benchmark sample data config file

--- a/sample_data/fmnist_benchmark/exp/dora_fmnist_benchmark.yml
+++ b/sample_data/fmnist_benchmark/exp/dora_fmnist_benchmark.yml
@@ -19,7 +19,11 @@ features: {
 top_n: 10
 outlier_detection: {
     conv_pae: {
-        latent_dim: 32 
+        latent_dim: 32,
+        max_epochs: 1000,
+        patience: 10,
+        val_split: 0.25,
+        verbose: 0
     }
 }
 
