Expose optimizer parameter

--- a/sample_data/fmnist_benchmark/exp/dora_fmnist_benchmark.yml
+++ b/sample_data/fmnist_benchmark/exp/dora_fmnist_benchmark.yml
@@ -22,6 +22,7 @@ outlier_detection: {
         latent_dim: 32,
         max_epochs: 1000,
         patience: 10,
+        optimizer: 'adam',
         val_split: 0.25,
         verbose: 0
     }
