Add LRX to the planetary rover sample experiment. (#2)

--- a/sample_data/planetary_rover/png/exp/navcam.config
+++ b/sample_data/planetary_rover/png/exp/navcam.config
@@ -36,6 +36,11 @@ outlier_detection: {
     # RX does not work well for raw features
     # because dimensionality > n_samples
     #    rx: { }
+    lrx: {
+        inner_window: 3,
+        outer_window: 5,
+        bands: 1
+    },
 }
 
 # Results organization module
