update example config files #59

--- a/dora_exp_pipeline/example_config/dora_astronomy_des.yml
+++ b/dora_exp_pipeline/example_config/dora_astronomy_des.yml
@@ -18,15 +18,17 @@ features: {
 # Outlier detection module
 top_n: 10
 outlier_detection: {
-    iforest: {},
-    pca: {
-        k: 3
+    iforest: {
+        n_trees: 100
     },
-    rx: {},
-    negative_sampling: {
-       percent_increase: 20
-    },
-    random: {}
+    # pca: {
+    #     k: 3
+    # },
+    # rx: {},
+    # negative_sampling: {
+    #    percent_increase: 20
+    # },
+    # random: {}
 }
 
 # Results organization module
