--- a/dora_exp_pipeline/example_config/dora_raster_pixels.yml
+++ b/dora_exp_pipeline/example_config/dora_raster_pixels.yml
@@ -18,7 +18,9 @@ features: {
 # Outlier detection module
 top_n: 'None'
 outlier_detection: {
-    # iforest: {},
+    # iforest: {
+    #     n_trees: 100
+    # },
     # pca: {
     #     k: 3
     # },
