Update pytests to specify number of trees in iForest. (#59,#14)

--- a/test/planetary.config
+++ b/test/planetary.config
@@ -26,7 +26,9 @@ outlier_detection: {
     demud: {
         k: 5
     },
-    iforest: { },
+    iforest: {
+        n_trees: 100
+    },
     negative_sampling: {
         percent_increase: 20
     },
