Update tensorboard config; re-run fmnist experiment

--- a/sample_data/fmnist_benchmark/exp/dora_fmnist_benchmark.yml
+++ b/sample_data/fmnist_benchmark/exp/dora_fmnist_benchmark.yml
@@ -24,6 +24,7 @@ outlier_detection: {
         patience: 10,
         optimizer: 'adam',
         val_split: 0.25,
+        log_dir: 'sample_data/fmnist_benchmark/exp/logs'
     }
 }
 
