Add PAE ranking and image directory data loader (#13)

--- a/dora_exp_pipeline/example_config/dora_time_series.yml
+++ b/dora_exp_pipeline/example_config/dora_time_series.yml
@@ -31,6 +31,9 @@ outlier_detection: {
     negative_sampling: {
         percent_increase: 20
     },
+    pae: {
+        latent_dim: 3
+    },
     random: {}
 }
 
