Only run tests on issue14 branch

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,5 @@
 on:
   push:
-    branches:
-      - master
   pull_request:
     branches:
       - master
@@ -28,6 +26,8 @@ jobs:
       - name: Lint with flake8
         run: | 
           flake8 --max-line-length 80 --per-file-ignores="__init__.py:F401" dora_exp_pipeline
+        
       - name: Test with pytest
+        if: github.ref == 'refs/heads/issue14-unittests'
         run: |
           pytest
