Update results for Earth exp with corrected plots and PAE. #42

--- a/exp/faw_time_series/faw_time_series.yml
+++ b/exp/faw_time_series/faw_time_series.yml
@@ -27,6 +27,9 @@ outlier_detection: {
     demud: {
         k: 3
     },
+    pae: {
+        latent_dim: 3
+    },
     rx: {},
     negative_sampling: {
         percent_increase: 20
