Move planetary rover config file and update image directories. (#60)

--- a/exp/planetary_rover/planetary-last10sols.config
+++ b/exp/planetary_rover/planetary-last10sols.config
@@ -8,10 +8,10 @@ data_loader: {
     name: 'image',
     params: {}
 }
-data_to_fit: '/proj/dora/data/planetary/fit/'
-data_to_score: '/proj/dora/data/planetary/score/'
+data_to_fit: '/proj/dora/data/planetary/fit-1343-1693/'
+data_to_score: '/proj/dora/data/planetary/score-1694-1703/'
 zscore_normalization: False
-out_dir: '/tmp/planetary-large'
+out_dir: '/tmp/planetary-last10sols'
 
 # Feature extraction module
 features: {
@@ -28,18 +28,18 @@ features: {
 # Outlier detection module
 top_n: 10
 outlier_detection: {
-    #demud: {
-    #    k: 5
-    #},
+    demud: {
+        k: 5
+    },
     iforest: {
         n_trees: 100
     },
-    #negative_sampling: {
-    #    percent_increase: 20
-    #},
-    #pca: {
-    #    k: 5
-    #},
+    negative_sampling: {
+        percent_increase: 20
+    },
+    pca: {
+        k: 5
+    },
     # RX does not work well for raw features
     # because dimensionality > n_samples
     #    rx: { }
@@ -53,5 +53,8 @@ outlier_detection: {
 
 # Results organization module
 results: {
-    save_scores: { }
+    save_scores: { },
+    comparison_plot: {
+       'validation_dir': 'exp/planetary_rover/novel_labels.csv'
+    },
 }
