Restrict to top 9 selections (#60)

--- a/exp/planetary_rover/planetary-last10sols.config
+++ b/exp/planetary_rover/planetary-last10sols.config
@@ -26,7 +26,7 @@ features: {
 }
 
 # Outlier detection module
-top_n: 10
+top_n: 9 # there are only 9 to find
 outlier_detection: {
     demud: {
         k: 5
@@ -34,9 +34,9 @@ outlier_detection: {
     iforest: {
         n_trees: 100
     },
-    negative_sampling: {
-        percent_increase: 20
-    },
+    #negative_sampling: {
+    #    percent_increase: 20
+    #},
     pca: {
         k: 5
     },
