Rank all images, not just top 9.  Add PAE, LRX, and Random algs. (#60)

--- a/exp/planetary_rover/planetary-last10sols.config
+++ b/exp/planetary_rover/planetary-last10sols.config
@@ -26,7 +26,8 @@ features: {
 }
 
 # Outlier detection module
-top_n: 9 # there are only 9 to find
+top_n: None
+#top_n: 9 # there are only 9 to find
 outlier_detection: {
     demud: {
         k: 5
@@ -34,21 +35,24 @@ outlier_detection: {
     iforest: {
         n_trees: 100
     },
-    #negative_sampling: {
-    #    percent_increase: 20
-    #},
+    negative_sampling: {
+        percent_increase: 20
+    },
     pca: {
         k: 5
     },
     # RX does not work well for raw features
     # because dimensionality > n_samples
     #    rx: { }
-    #lrx: {
-    #    inner_window: 3,
-    #    outer_window: 9,
-    #    bands: 1
-    #},
-    #random: { }
+    lrx: {
+        inner_window: 1,
+        outer_window: 5,
+        bands: 1
+    },
+    pae: {
+        latent_dim: 5
+    },
+    random: { }
 }
 
 # Results organization module
