PAE fixes for planetary rover data #13 - add pixel normalization to image laoder - add pae config option disable flow - re-run planetary rover experiment

--- a/exp/planetary_rover/planetary-last10sols.config
+++ b/exp/planetary_rover/planetary-last10sols.config
@@ -21,7 +21,10 @@ features: {
         width: 64,
         # optional parameter; if defined, the height of the image will be
         # resized to the value of `height`
-        height: 64
+        height: 64,
+        # optional parameter; if True, all pixels will be normalized to the
+        # range [0,1]
+        normalize_pixels: True
     }
 }
 
@@ -50,7 +53,8 @@ outlier_detection: {
         bands: 1
     },
     pae: {
-        latent_dim: 5
+        latent_dim: 5,
+        use_flow: False
     },
     random: { }
 }
