--- a/dora_vis/package.json
+++ b/dora_vis/package.json
@@ -1,8 +1,10 @@
 {
   "name": "dora-vis",
+  "description": "Visualization Application for DORA Results",
+  "author": "Jake Lee",
   "version": "0.1.0",
   "private": true,
-  "main": "public/electron.js",
+  "main": "build/electron.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -23,7 +25,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "electron-dev": "concurrently \"BROWSER=none yarn start\" \"wait-on http://localhost:3000 && electron .\""
+    "electron-dev": "concurrently \"BROWSER=none yarn start\" \"wait-on http://localhost:3000 && electron .\"",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder"
   },
   "eslintConfig": {
     "extends": [
@@ -46,5 +50,14 @@
   "devDependencies": {
     "electron": "^14.0.0",
     "electron-builder": "^22.11.7"
-  }
+  },
+  "build": {
+    "extends": null,
+    "appId": "com.doravis.app",
+    "files": [
+      "./build/**/*",
+      "./build/electron.js"
+    ]
+  },
+  "homepage": "."
 }
