--- a/dora_vis/package.json
+++ b/dora_vis/package.json
@@ -9,9 +9,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "concurrently": "^6.2.1",
     "csv": "^5.5.3",
-    "electron-is-dev": "^2.0.0",
     "js-yaml": "^4.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -48,8 +46,10 @@
     ]
   },
   "devDependencies": {
+    "concurrently": "^6.2.2",
     "electron": "^14.0.0",
-    "electron-builder": "^22.11.7"
+    "electron-builder": "^22.11.7",
+    "electron-is-dev": "^2.0.0"
   },
   "build": {
     "extends": null,
