--- a/dora_vis/package.json
+++ b/dora_vis/package.json
@@ -15,8 +15,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-table": "^7.7.0",
-    "wait-on": "^6.0.0",
-    "web-vitals": "^1.1.2"
+    "wait-on": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,8 +47,7 @@
   "devDependencies": {
     "concurrently": "^6.2.2",
     "electron": "^14.0.0",
-    "electron-builder": "^22.11.7",
-    "electron-is-dev": "^2.0.0"
+    "electron-builder": "^22.11.7"
   },
   "build": {
     "extends": null,
