--- a/exp/astrophysics_des/dora_astronomy_des_trunc100000.yml
+++ b/exp/astrophysics_des/dora_astronomy_des_trunc100000.yml
@@ -1,6 +1,6 @@
 # Data loading module parameters
 data_loader: {
-    name: 'Catalog',
+    name: 'FeatureVector',
     params: {}
 }
 data_to_fit: '/proj/des/products/Y3_GOLD_2_2_subsampled_filtered_public_for_dora.trunc100000.h5'
