Add fit_single_tree parameter to filenames. #7

--- a/test/earth_time_series.config
+++ b/test/earth_time_series.config
@@ -20,7 +20,8 @@ outlier_detection: {
         k: 3
     },
     iforest: {
-        n_trees: 100
+        n_trees: 100,
+        fit_single_trees: False
     },
     negative_sampling: {
         percent_increase: 20
