--- a/test/earth_volcanoes_pixels.config
+++ b/test/earth_volcanoes_pixels.config
@@ -19,7 +19,8 @@ features: {
 top_n: 'None'
 outlier_detection: {
     iforest: {
-        n_trees: 100
+        n_trees: 100,
+        fit_single_trees: False
     },
     demud: {
         k: 1
