--- a/test/earth_volcanoes_patches.config
+++ b/test/earth_volcanoes_patches.config
@@ -21,7 +21,8 @@ features: {
 top_n: 'None'
 outlier_detection: {
     iforest: {
-        n_trees: 100
+        n_trees: 100,
+        fit_single_trees: False
     },
     demud: {
         k: 3
