--- a/test/planetary.config
+++ b/test/planetary.config
@@ -27,7 +27,8 @@ outlier_detection: {
         k: 5
     },
     iforest: {
-        n_trees: 100
+        n_trees: 100,
+        fit_single_trees: False
     },
     negative_sampling: {
         percent_increase: 20
