--- a/dora_exp_pipeline/example_config/dora_raster_patches.yml
+++ b/dora_exp_pipeline/example_config/dora_raster_patches.yml
@@ -20,22 +20,23 @@ features: {
 # Outlier detection module
 top_n: 'None'
 outlier_detection: {
-    # iforest: {
-    #     n_trees: 100
-    # },
-    # pca: {
-    #     k: 3
-    # },
-    # rx: {},
+    iforest: {
+        n_trees: 100,
+        fit_single_trees: False
+    },
+    pca: {
+        k: 3
+    },
+    rx: {},
     lrx: {
         inner_window: 3,
         outer_window: 5,
         bands: 1
     },
-    # negative_sampling: {
-    #     percent_increase: 20
-    # },
-    # random: {}
+    negative_sampling: {
+        percent_increase: 20
+    },
+    random: {}
 }
 
 # Results organization module
