--- a/dora_exp_pipeline/example_config/dora_astronomy_des.yml
+++ b/dora_exp_pipeline/example_config/dora_astronomy_des.yml
@@ -3,10 +3,10 @@ data_loader: {
     name: 'FeatureVector',
     params: {}
 }
-data_to_fit: '/home/urebbapr/research/dora/sample_data/astronomy_des/Y3_mastercat_12_3_19_SOMv0.21_indexselect_p0.0001_lups_colors.h5'
-data_to_score: '/home/urebbapr/research/dora/sample_data/astronomy_des/Y3_mastercat_12_3_19_SOMv0.21_indexselect_p0.0001_lups_colors.h5'
+data_to_fit: 'sample_data/astronomy_des/Y3_mastercat_12_3_19_SOMv0.21_indexselect_p0.0001_lups_colors.h5'
+data_to_score: 'sample_data/astronomy_des/Y3_mastercat_12_3_19_SOMv0.21_indexselect_p0.0001_lups_colors.h5'
 zscore_normalization: False
-out_dir: 'exp/astrophysics_des/results_Y3_mastercat_12_3_19_SOMv0.21_indexselect_p0.0001_lups_colors'
+out_dir: 'results'
 
 # Feature extraction module
 features: {
@@ -14,8 +14,6 @@ features: {
         # no args
     }
 }
-
-# Outlier detection module
 
 # Outlier detection module
 top_n: None
