--- a/sample_data/earth_volcanoes/exp/patches/earth_volcanoes_patches.yml
+++ b/sample_data/earth_volcanoes/exp/patches/earth_volcanoes_patches.yml
@@ -21,7 +21,8 @@ features: {
 top_n: 'None'
 outlier_detection: {
     iforest: {
-        n_trees: 100
+        n_trees: 100,
+        fit_single_trees: False
     },
     demud: {
         k: 3
