--- a/sample_data/earth_volcanoes/exp/pixels/earth_volcanoes_pixels.yml
+++ b/sample_data/earth_volcanoes/exp/pixels/earth_volcanoes_pixels.yml
@@ -19,7 +19,8 @@ features: {
 top_n: 'None'
 outlier_detection: {
     iforest: {
-        n_trees: 100
+        n_trees: 100,
+        fit_single_trees: False
     },
     demud: {
         k: 1
